minor fix for style of checked radio button in Shapeshift page

--- a/old-ui/app/css/index.css
+++ b/old-ui/app/css/index.css
@@ -693,7 +693,7 @@ input.large-input {
   height: 18px;
   border: solid;
   border-style: double;
-  border-radius: 4px;
+  border-radius: 6px;
   border-width: 5px;
   background: #6729a8;
   border-color: #F7F7F7;
